<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NativeActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/propertyName"
        app:layout_constraintBottom_toBottomOf="@+id/tvPropertyname_Test"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvPropertyname_Test"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvPropertyname_Test"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/propertyAddress"
        app:layout_constraintBottom_toBottomOf="@+id/tvPropertyaddress_Test"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/tvPropertyaddress_Test" />

    <TextView
        android:id="@+id/tvPropertyaddress_Test"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@+id/tvPropertyname_Test"
        app:layout_constraintStart_toStartOf="@+id/tvPropertyname_Test"
        app:layout_constraintTop_toBottomOf="@+id/tvPropertyname_Test" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/logo_app"
        app:layout_constraintEnd_toEndOf="@+id/tvPropertyname_Test"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/propertyType"
        app:layout_constraintBottom_toBottomOf="@+id/tvPropertytype_Test"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/tvPropertytype_Test" />

    <TextView
        android:id="@+id/tvPropertytype_Test"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@+id/tvPropertyaddress_Test"
        app:layout_constraintStart_toStartOf="@+id/tvPropertyaddress_Test"
        app:layout_constraintTop_toBottomOf="@+id/tvPropertyaddress_Test" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/bedroom"
        app:layout_constraintBottom_toBottomOf="@+id/tvBedrooms_Test"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/tvBedrooms_Test" />

    <TextView
        android:id="@+id/tvBedrooms_Test"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@+id/tvPropertytype_Test"
        app:layout_constraintStart_toStartOf="@+id/tvPropertytype_Test"
        app:layout_constraintTop_toBottomOf="@+id/tvPropertytype_Test" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/monthlyRentPrice"
        app:layout_constraintBottom_toBottomOf="@+id/tvPrices_Test"
        app:layout_constraintEnd_toEndOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="@+id/tvPrices_Test" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/furnitureType"
        app:layout_constraintBottom_toBottomOf="@+id/tvFurnituretypes_Test"
        app:layout_constraintEnd_toEndOf="@+id/textView17"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toTopOf="@+id/tvFurnituretypes_Test" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/reporterName"
        app:layout_constraintBottom_toBottomOf="@+id/tvReporter_Test"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toTopOf="@+id/tvReporter_Test" />

    <TextView
        android:id="@+id/tvPrices_Test"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@+id/tvBedrooms_Test"
        app:layout_constraintStart_toStartOf="@+id/tvBedrooms_Test"
        app:layout_constraintTop_toBottomOf="@+id/tvBedrooms_Test" />

    <TextView
        android:id="@+id/tvFurnituretypes_Test"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@+id/tvPrices_Test"
        app:layout_constraintStart_toStartOf="@+id/tvPrices_Test"
        app:layout_constraintTop_toBottomOf="@+id/tvPrices_Test" />

    <TextView
        android:id="@+id/tvReporter_Test"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@+id/tvFurnituretypes_Test"
        app:layout_constraintStart_toStartOf="@+id/tvFurnituretypes_Test"
        app:layout_constraintTop_toBottomOf="@+id/tvFurnituretypes_Test" />

</androidx.constraintlayout.widget.ConstraintLayout>